<resources>
    <string name="app_name">Infinity Miles</string>
    <string name="buttonBattleship">Battleship</string>
    <string name="buttoniSpy">iSPY</string>
    <string name="buttonSpotTheCar">Spot the Car</string>
    <string name="buttonLicensePlate">License Plate Game</string>
    <string name="buttonA1">A1</string>
    <string name="buttonA2">A2</string>
    <string name="buttonA3">A3</string>
    <string name="buttonA4">A4</string>
    <string name="toastMiss">Miss!</string>
    <string name="toastHit">Hit!</string>
    <string name="alreadyChosen">X</string>
    <string name="placeDestroyer">Please choose where you would like to place your destroyer.</string>
    <string name="placeDestroyerCount">(Select 2 spaces)</string>
    <string name="buttonNext">NEXT</string>
    <string name="thumbnail">thumbnail</string>
    <string name="Image_License_Plate">Image of State License Plate</string>
    <string name="textStateName">State Name</string>
</resources>
