<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/battleshipView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.infinitylabs.infinitymiles.BattleshipActivity">

    <Button
        android:id="@+id/buttonA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayResult"
        android:text="@string/buttonA1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonA2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayResult"
        android:text="@string/buttonA2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonA3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonA1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonA3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayResult"
        android:text="@string/buttonA3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonA4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonA2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonA4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayResult"
        android:text="@string/buttonA4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonA3"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
