<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.infinitylabs.infinitymiles.MainActivity">

    <Button
        android:id="@+id/BattleshipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playBattleship"
        android:text="@string/buttonBattleship"
        app:layout_constraintBottom_toTopOf="@+id/SpotTheCarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LicensePlateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLicensePlate"
        app:layout_constraintBottom_toTopOf="@+id/iSpyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpotTheCarButton" />

    <Button
        android:id="@+id/SpotTheCarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSpotTheCar"
        app:layout_constraintBottom_toTopOf="@+id/LicensePlateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BattleshipButton" />

    <Button
        android:id="@+id/iSpyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttoniSpy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LicensePlateButton" />

</android.support.constraint.ConstraintLayout>
